--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for("overview") }}">[O]verview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">[o]verview</a>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for("configure_index") }}">[M]ain Setup</a>
+        <a class="upper-left" href="{{ url_for("configure_index") }}">[m]ain setup</a>
         <span class="separator">|</span>
         <a class="upper-left"
-           href="{{ url_for('configure_event', event_id=current.id) }}">Event S[e]tup</a>
+           href="{{ url_for('configure_event', event_id=current.id) }}">event s[e]tup</a>
     </div>
 {% endblock %}
 {% block content %}
@@ -22,7 +22,7 @@
                 return;
             }
             $(document).on('keypress', (event) => {
-                const key = event.key.toLowerCase();
+                const key = event.key;
                 if (key === 'r') {
                     $('#roll-btn').click();
                 {% if current.outcome_type in ['fourway', 'numeric'] %}
@@ -48,7 +48,7 @@
         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
         &larr; back to
         <a href="{{ link }}">{{ referrer_link.get('name', 'Previous') }}</a>
-        <span class="hotkey-indicator">[{{ letter }}]</span>
+        <span class="hotkey-indicator">{{ letter }}</span>
         <br>
     {% endif %}
     <h1>{{ current.name }}</h1>
