--- a/app/templates/session/upper_right_menu.html
+++ b/app/templates/session/upper_right_menu.html
@@ -11,5 +11,5 @@
             <br>
         </div>
     </span>
-    Player <span class="username" id="playerName">{{ current_username }}</span>
+    player <span class="username" id="playerName">{{ current_username }}</span>
 </div>
