--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for("overview") }}">Overview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">overview</a>
         <span class="separator">|</span>
-        <a href="{{ url_for("configure_index") }}">Main Setup Page</a>
+        <a href="{{ url_for("configure_index") }}">main setup</a>
     </div>
 {% endblock %}
 {% block content %}
