--- a/app/templates/configure/lookup.html
+++ b/app/templates/configure/lookup.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for("overview") }}">[O]verview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">[o]verview</a>
         <span class="separator">|</span>
-        <a href="{{ url_for("configure_index") }}">[M]ain Setup</a>
+        <a href="{{ url_for("configure_index") }}">[m]ain setup</a>
     </div>
 {% endblock %}
 {% block content %}
@@ -17,7 +17,7 @@
                 return;
             }
             document.addEventListener('keypress', (event) => {
-                const key = event.key.toLowerCase();
+                const key = event.key;
                 if (linkForKey[key]) {
                     window.location.href = linkForKey[key];
                 }
@@ -51,7 +51,7 @@
                     {% set link = url_for('play_item', item_id=use.item.id, main_pile_type='universal') %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     In
                     <a href="{{ link }}">General Storage</a>
                     : {{ use.quantity | formatNum }}
@@ -59,14 +59,14 @@
                     {% set link = url_for('play_item', item_id=use.id, main_pile_type='universal') %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     Mentioned By
                     <a href="{{ link }}">{{ use.name }}</a>
                 {% elif use_container_type == 'char' %}
                     {% set link = url_for('play_char', char_id=container.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     Carried by
                     <a href="{{ link }}">{{ container.name }}</a>
                     : {{ use.quantity | formatNum }}
@@ -74,7 +74,7 @@
                     {% set link = url_for('play_location', loc_id=container.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     At
                     <a href="{{ link }}">{{ container.name }}</a>
                     {% if max(use.position) %}
@@ -86,7 +86,7 @@
                     {% set link = url_for('play_event', event_id=entity.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     Involved in
                     <a href="{{ link }}">{{ entity.name }}</a>
                 {% else %}
@@ -100,13 +100,13 @@
                     {% set link = url_for('play_item', item_id=subject.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     <a href="{{ link }}">{{ subject.name }}</a>
                 {% elif subject_typename == 'char' %}
                     {% set link = url_for('play_char', char_id=subject.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     <a href="{{ link }}">{{ subject.name }}</a>
                 {% else %}
                     <h3>Unexpected subject type '{{ subject_typename }}'</h3>
@@ -118,20 +118,20 @@
                     {% set link = url_for('play_char', char_id=entity.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     <a href="{{ link }}">{{ entity.name }}</a>
                 {% elif use_typename == 'attrib' %}
                     {% set link = url_for('configure_attrib', attrib_id=entity.id) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     <a href="{{ link }}">{{ entity.name }}</a> (configure)
                 {% else %}
                     {% set param_name = entity.typename() ~ '_id' %}
                     {% set link = url_for('play_' ~ entity.basename(), **{param_name: entity.id}) %}
                     {% set letter = link_letters.next(link) %}
                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                    <span class="hotkey-indicator">{{ letter }}</span>
                     <a href="{{ link }}">{{ entity.name }}</a>
                 {% endif %}
                 <br>
@@ -140,7 +140,7 @@
                 {% set link = url_for('play_location', loc_id=entity.id) %}
                 {% set letter = link_letters.next(link) %}
                 <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                <span class="hotkey-indicator">[{{ letter }}]</span>
+                <span class="hotkey-indicator">{{ letter }}</span>
                 <a href="{{ link }}">{{ entity.name }}</a>
                 <br>
             {% elif current.typename() == 'char' %}
@@ -149,7 +149,7 @@
                 {% set link = url_for('play_' ~ entity.basename(), **{param_name: entity.id}) %}
                 {% set letter = link_letters.next(link) %}
                 <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                <span class="hotkey-indicator">[{{ letter }}]</span>
+                <span class="hotkey-indicator">{{ letter }}</span>
                 <a href="{{ link }}">{{ entity.name }}</a>
             {% else %}
                 <h3>Unexpected type '{{ current.typename() }}'</h3>
