--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for("overview") }}">[O]verview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">[o]verview</a>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for("configure_index") }}">[M]ain Setup</a>
+        <a class="upper-left" href="{{ url_for("configure_index") }}">[m]ain setup</a>
         <span class="separator">|</span>
         <a class="upper-left"
-           href="{{ url_for('configure_item', item_id=current.id) }}">Item S[e]tup</a>
+           href="{{ url_for('configure_item', item_id=current.id) }}">item s[e]tup</a>
     </div>
 {% endblock %}
 {% block content %}
@@ -23,7 +23,7 @@
                 return;
             }
             document.addEventListener('keypress', (event) => {
-                const key = event.key.toLowerCase();
+                const key = event.key;
                 if (key === 'd') {
                     event.preventDefault();
                     $('#drop-btn').click();
@@ -59,7 +59,7 @@
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                         Carried by
                         <a href="{{ link }}">{{ container.name }}</a>
-                        <span class="hotkey-indicator">[{{ letter }}]</span>
+                        <span class="hotkey-indicator">{{ letter }}</span>
                         <br>
                     {% elif current.pile.container_type() == 'loc' %}
                         {% set link = url_for('play_location', loc_id=container.id) %}
@@ -70,7 +70,7 @@
                         {% if max(current.pile.position) %}
                             <span class="label-like">[{{ current.pile.position }}]</span>
                         {% endif %}
-                        <span class="hotkey-indicator">[{{ letter }}]</span>
+                        <span class="hotkey-indicator">{{ letter }}</span>
                         <br>
                     {% else %}
                         General Storage (by default)
@@ -142,13 +142,13 @@
                         {% if current.pile.container_type() == 'char' %}
                             {% if current.pile.slot %}
                                 <div class="button-column" id="unequip-container">
-                                    <button id="unequip-btn" class="go-button">Une[q]uip</button>
+                                    <button id="unequip-btn" class="go-button">une[q]uip</button>
                                     <span class="text-by-button">{{ current.pile.slot }}</span>
                                 </div>
                             {% else %}
                                 {% if game_data.overall.slots %}
                                     <div class="button-column" id="equip-container">
-                                        <button id="equip-btn" class="go-button">E[q]uip</button>
+                                        <button id="equip-btn" class="go-button">e[q]uip</button>
                                         <select id="char-equip-slot">
                                             {% for slot in game_data.overall.slots %}
                                                 <option value="{{ slot }}" {% if slot == defaults.slot %}selected{% endif %}>{{ slot }}</option>
@@ -158,13 +158,13 @@
                                 {% endif %}
                             {% endif %}
                             <div class="button-column" id="drop-container">
-                                <button id="drop-btn" class="go-button">[D]rop</button>
+                                <button id="drop-btn" class="go-button">[d]rop</button>
                                 <input type="text" id="quantity_to_drop" size="10" value="{{ current.pile.quantity | formatNum }}">
                             </div>
                         {% endif %}
                         {% if current.pile.container_type() == 'loc' and params.loc_id and characters_at_loc %}
                             <div class="button-column" id="pickup-container">
-                                <button id="pickup-btn" class="go-button">[P]ick Up</button>
+                                <button id="pickup-btn" class="go-button">[p]ick up</button>
                                 <select id="char-picking-up">
                                     {% for char in characters_at_loc %}
                                         <option value="{{ char.id }}"
@@ -301,7 +301,7 @@
                                                 <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
                                                 <td>
                                                     <strong title="byproduct">&amp;</strong>
-                                                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                                                    <span class="hotkey-indicator">{{ letter }}</span>
                                                     <a href="{{ link }}">{{ item.maskable_name() }}</a>
                                                 </td>
                                                 <td>{{ byproduct.rate_amount | formatNum }}</td>
@@ -333,7 +333,7 @@
                                                         {% set letter = link_letters.next(link) %}
                                                         <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
                                                         <td>
-                                                            <span class="hotkey-indicator">[{{ letter }}]</span>
+                                                            <span class="hotkey-indicator">{{ letter }}</span>
                                                             <a href="{{ link }}">{{ item.maskable_name() }}</a>
                                                         </td>
                                                     {% endif %}
@@ -366,7 +366,7 @@
                                                                 {% endif %}
                                                                 {% set letter = link_letters.next(link) %}
                                                                 <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                                                                <span class="hotkey-indicator">[{{ letter }}]</span>
+                                                                <span class="hotkey-indicator">{{ letter }}</span>
                                                                 <a href="{{ link }}">{{ container.name }}</a>
                                                                 <br>
                                                             {% endif %}
@@ -409,7 +409,7 @@
                                                     {% set letter = link_letters.next(link) %}
                                                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                                                     <td>
-                                                        <span class="hotkey-indicator">[{{ letter }}]</span>
+                                                        <span class="hotkey-indicator">{{ letter }}</span>
                                                         <a href="{{ link }}">{{ subject.name }}</a>
                                                     </td>
                                                 {% else %}
@@ -434,7 +434,7 @@
                     {% for source in recipe.sources %}
                         {% if current.id == source.item.id %}
                             {% set _ = outerscope.used_as_source.append(
-                                {'item': other_item, 'source': source}) %}
+                                {'item': other_item, 'name': other_item.name, 'source': source}) %}
                         {% endif %}
                     {% endfor %}
                     {% for byproduct in recipe.byproducts %}
@@ -453,7 +453,7 @@
                                 <th>Used For</th>
                                 <th>Required</th>
                             </tr>
-                            {% for used_for in outerscope.used_as_source %}
+                            {% for used_for in outerscope.used_as_source|sort(attribute="name") %}
                                 {% set source = used_for.source %}
                                 {% if used_for.item.storage_type == 'local' and not params.loc_id %}
                                     <tr>
@@ -474,7 +474,7 @@
                                     <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
                                     <tr>
                                         <td>
-                                            <span class="hotkey-indicator">[{{ letter }}]</span>
+                                            <span class="hotkey-indicator">{{ letter }}</span>
                                             <a href="{{ link }}">{{ used_for.item.maskable_name() }}</a>
                                         </td>
                                         <td>
@@ -504,7 +504,7 @@
                                 <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
                                 <tr>
                                     <td>
-                                        <span class="hotkey-indicator">[{{ letter }}]</span>
+                                        <span class="hotkey-indicator">{{ letter }}</span>
                                         <a href="{{ link }}">{{ byproduct_of.item.maskable_name() }}</a>
                                     </td>
                                 </tr>
@@ -523,7 +523,7 @@
                                 {% set letter = link_letters.next(link) %}
                                 <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
                                 <li>
-                                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                                    <span class="hotkey-indicator">{{ letter }}</span>
                                     <a href="{{ link }}">{{ attrib_of.attrib.name }}</a>
                                     {% if attrib_of.attrib.enum %}
                                         {% set index = attrib_of.val | int %}
@@ -556,7 +556,7 @@
                                 {% set link = url_for('play_event', event_id=evt.id, from_id=current.id, from_typename=current.typename()) %}
                                 {% set letter = link_letters.next(link) %}
                                 <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                                <span class="hotkey-indicator">[{{ letter }}]</span>
+                                <span class="hotkey-indicator">{{ letter }}</span>
                                 <a href="{{ link }}">{{ evt.name }}</a>
                                 {% if evt.trigger_chance > 0 %}
                                     <span class="label-like">&nbsp;(chance to trigger)</span>
@@ -929,7 +929,7 @@
                     'equip-container': notEmpty && inventory && storage_carried && !inSlot,
                     'pickup-container': notEmpty && atLoc && !storage_local,
                     'unequip-container': notEmpty && inSlot,
-                    'drop-container': notEmpty && inventory && charAtLoc && !inSlot,
+                    'drop-container': notEmpty && inventory && charAtLoc,
                 };
                 Object.keys(visibilityMap).forEach((id) => {
                     if (visibilityMap[id]) {
