--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block upper_left %}
     <div class="nav-container">
-        <span class="upper-left">Overview</span>
+        <span class="upper-left">overview</span>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for("configure_index") }}">[M]ain Setup</a>
+        <a class="upper-left" href="{{ url_for("configure_index") }}">[m]ain setup</a>
     </div>
 {% endblock %}
 {% block content %}
@@ -16,7 +16,7 @@
                 return;
             }
             document.addEventListener('keypress', (event) => {
-                const key = event.key.toLowerCase();
+                const key = event.key;
                 if (linkForKey[key]) {
                     window.location.href = linkForKey[key];
                 }
@@ -64,7 +64,7 @@
                                     {% set link = url_for('play_char', char_id=char.char_id) %}
                                     {% set letter = link_letters.next(link) %}
                                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                                    <span class="hotkey-indicator">{{ letter }}</span>
                                     <a href="{{ link }}">{{ char.char_name }}</a>
                                 {% endif %}
                             </td>
@@ -73,7 +73,7 @@
                                     {% set link = url_for('play_location', loc_id=char.loc_id) %}
                                     {% set letter = link_letters.next(link) %}
                                     <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                                    <span class="hotkey-indicator">[{{ letter }}]</span>
+                                    <span class="hotkey-indicator">{{ letter }}</span>
                                     <a href="{{ link }}">{{ char.loc_name }}</a>
                                 {% endif %}
                             </td>
@@ -93,7 +93,7 @@
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                         <tr>
                             <td>
-                                <span class="hotkey-indicator">[{{ letter }}]</span>
+                                <span class="hotkey-indicator">{{ letter }}</span>
                                 <a href="{{ link }}">{{ loc.name }}</a>
                             </td>
                         </tr>
@@ -117,7 +117,7 @@
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
                         <tr>
                             <td>
-                                <span class="hotkey-indicator">[{{ letter }}]</span>
+                                <span class="hotkey-indicator">{{ letter }}</span>
                                 <a href="{{ link }}">{{ item.name }}</a>
                             </td>
                             <td id="item-{{ item.id }}-quantity">
@@ -131,7 +131,7 @@
                                         {% set link = url_for('play_attrib', attrib_id=attrib_of.attrib_id, subject_type='item', subject_id=item.id) %}
                                         {% set letter = link_letters.next(link) %}
                                         <script>linkForKey['{{ letter }}'] = "{{ link|safe }}";</script>
-                                        <span class="hotkey-indicator">[{{ letter }}]</span>
+                                        <span class="hotkey-indicator">{{ letter }}</span>
                                         <a href="{{ link }}">{{ attrib_of.attrib.name }}</a>{% if not attrib_of.attrib.binary %}<span>:</span>{% endif %}
                                         {% if attrib_of.attrib.enum %}
                                             {% set index = attrib_of.val | int %}
