--- a/app/templates/session/username.html
+++ b/app/templates/session/username.html
@@ -1,17 +1,16 @@
 {% extends 'base.html' %}
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for("overview") }}">Overview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">overview</a>
         <span class="separator">|</span>
-        <a href="{{ url_for("configure_index") }}">Main Setup</a>
+        <a href="{{ url_for("configure_index") }}">main setup</a>
     </div>
 {% endblock %}
 {% block content %}
     <h1>Change User ID</h1>
     <p class="info">
         So friends can see who is connected.
-        For example, the initials of your first and last name,
-        or the name of the character you're playing.
+        For example, the initials of your name.
         Resets when the session times out.
     </p>
     <p class="info">Leave blank to generate random letters.</p>
