Fixed client-side destination uniqueness check. Limit upload size. Include play and configure in lookup.

--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -246,7 +246,7 @@
                 }
                 let destExists = false;
                 $('.destination').each((index, element) => {
-                    const existingId = $(element).find('input[name="dest_id[]"]').val();
+                    const existingId = $(element).find('input[name="other_loc_id[]"]').val();
                     if (existingId === destId) {
                         destExists = true;
                         return false; // exit the each loop
