--- a/app/templates/configure/lookup.html
+++ b/app/templates/configure/lookup.html
@@ -24,19 +24,9 @@
             });
         });
     </script>
-    <h1>Lookup
-    {% if current.typename() == 'item' %}
-        Item
-    {% elif current.typename() == 'char' %}
-        Character
-    {% elif current.typename() == 'attrib' %}
-        Attribute
-    {% elif current.typename() == 'event' %}
-        Event
-    {% endif %}
-    : {{ current.name }}</h1>
+    <h1>Lookup: {{ current.name }}</h1>
     <p class="info">
-    Find where items are located, where attributes are used, or where events are linked.
+    Find where items and characters are located, attributes are used, or events and locations are linked.
     </p>
     <ul>
         {% for use in uses %} {# 'use': noun as in "the use of" #}
@@ -137,11 +127,22 @@
                 <br>
             {% elif current.typename() == 'loc' %}
                 {% set entity = use %}
-                {% set link = url_for('play_location', loc_id=entity.id) %}
-                {% set letter = link_letters.next(link) %}
-                <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-                <span class="hotkey-indicator">{{ letter }}</span>
-                <a href="{{ link }}">{{ entity.name }}</a>
+                {% if use_typename == 'loc' %}
+                    {% set link = url_for('play_location', loc_id=entity.id) %}
+                    {% set letter = link_letters.next(link) %}
+                    <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                    <span class="hotkey-indicator">{{ letter }}</span>
+                    Destination
+                    <a href="{{ link }}">{{ entity.name }}</a>
+                {% else %}
+                    {% set param_name = entity.typename() ~ '_id' %}
+                    {% set link = url_for('play_' ~ entity.basename(), **{param_name: entity.id}) %}
+                    {% set letter = link_letters.next(link) %}
+                    <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                    <span class="hotkey-indicator">{{ letter }}</span>
+                    Mentioned By
+                    <a href="{{ link }}">{{ entity.name }}</a>
+                {% endif %}
                 <br>
             {% elif current.typename() == 'char' %}
                 {% set entity = use %}
@@ -157,5 +158,18 @@
         {% else %}
             <h3>None found.</h3>
         {% endfor %}
+        <hr>
+        <!-- Lookup does not show recipe info, while /play does. -->
+        {% set param_name = current.typename() ~ '_id' %}
+        {% set link = url_for('play_' ~ current.basename(), **{param_name: current.id}) %}
+        {% set letter = link_letters.next(link) %}
+        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+        <span class="hotkey-indicator">{{ letter }}</span>
+        <a href="{{ link }}">Play {{ current.readable_type() }}</a><br>
+        {% set link = url_for('configure_' ~ current.basename(), **{param_name: current.id}) %}
+        {% set letter = link_letters.next(link) %}
+        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+        <span class="hotkey-indicator">{{ letter }}</span>
+        <a href="{{ link }}">Configure {{ current.readable_type() }}</a><br>
     </ul>
 {% endblock %}
