Furniture: full cast of characters and some working events.

--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -95,7 +95,7 @@
                                    size="5">
                             <button type="button"
                                     id="reset-die-btn">
-                                    Reset [D]ie
+                                    Reset [d]ie
                             </button>
                             <br>
                             <label for="die-max">Die Max:</label>
