--- a/app/templates/play/character.html
+++ b/app/templates/play/character.html
@@ -171,7 +171,7 @@
                 {% endfor %}
             </ul>
         {% endif %}
-        {% if game_data.events %}
+        {% if current.events %}
             <h2>Abilities</h2>
             <ul>
                 {% for evt_id in current.events %}
