--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -186,7 +186,10 @@
                     </style>
                     <table style="background: transparent;
                                   border-collapse: collapse;
-                                  font-family: monospace">
+                                  font-family: monospace;
+                                  width: max-content;
+                                  height: max-content;
+                                  margin: 0 10px 0 0;">
                         {% for y in range(1, height + 1) %}
                             <tr>
                                 {% for x in range(1, width + 1) %}
