--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -324,6 +324,15 @@ table.align-top td {
     padding: 10px;
 }
 
+.entity-at {
+    padding: 3px 6px;
+    background: linear-gradient(to top, #3f3f3f, #252525);
+    border-radius: 0 0 4px 0;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    font-style: italic;
+}
+
 .separated-div {
     background-color: #000000;
     border: 1px solid #444;
@@ -348,6 +357,12 @@ textarea {
     background-color: #2a2a2a;
     color: #ffffff;
     border: none;
+}
+
+.info-icon {
+    font-size: 1em;
+    vertical-align: middle;
+    line-height: 1;
 }
 
 .progress-container {
