--- a/app/templates/play/attrib.html
+++ b/app/templates/play/attrib.html
@@ -30,17 +30,29 @@
             });
         });
     </script>
-    {% set referrer_link = session.get('referrer_link') %}
-    {% if referrer_link %}
-        {% set link = referrer_link.get('url', '#') | safe %}
+    <div class="entity-at">
+    Attribute of
+    {% if subject.typename() == 'char' %}
+        {% set link = url_for('play_char', char_id=subject.id) %}
         {% set letter = link_letters.next(link) %}
         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
-        &larr; back to
-        <a href="{{ link }}">{{ referrer_link.get('name', 'Previous') }}</a>
         <span class="hotkey-indicator">{{ letter }}</span>
-        <br>
+        <a href="{{ link }}">{{ subject.name }}</a>
+    {% elif subject.typename() == 'item' %}
+        {% set referrer_link = session.get('referrer_link') %}
+        {% if referrer_link %}
+            &larr;
+            {% set link = referrer_link.get('url', '#') | safe %}
+        {% else %}
+            {% set link = url_for('play_item', item_id=subject.id) %}
+        {% endif %}
+        {% set letter = link_letters.next(link) %}
+        <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+        <span class="hotkey-indicator">{{ letter }}</span>
+        <a href="{{ link }}">{{ subject.name }}</a>
     {% endif %}
-    <h1>{{ current.name }} of {{ subject.name }}</h1>
+    </div>
+    <h1>{{ current.name }}</h1>
     {% if current.description %}
        {{ current.description|htmlify }}
     {% endif %}
