--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -243,7 +243,7 @@
                                 <th>Source</th>
                                 <th>Required</th>
                                 <th>In Stock</th>
-                                <th>Where<span class="info-icon" title="If there is a character or location with the resource not shown, first navigate to that page. For grids, move next to the resource.">ℹ️</span></th>
+                                <th>Where<span class="info-icon" title="To show a missing character or location that has the resource, first navigate to that page. For grids, move next to the resource.">ℹ️</span></th>
 
                             </tr>
                             {% for recipe in current.recipes|sort(attribute='id') %}
