--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -29,7 +29,7 @@
             <span title="You won the scenario!">✅</span>
         {% elif current_data.overall.win_reqs %}
             <span style="color: gray;"
-            title="There are win conditions &mdash; see Overall Settings.">☐</span>
+            title="There are win conditions &mdash; see Overall Settings.">🚩</span>
         {% endif %}
     </h1>
     <p>{{ current_data.overall.description|htmlify }}</p>
